# webcam_ci

./: .travis.yml  CMakeLists.txt  appveyor.yml
test/: CMakeLists.txt
test/src/: video_format_tests.cpp
webcam/: CMakeLists.txt
webcam/src/: VideoFormat.cpp  VideoFormat.hpp
